try fix animation on mobile 1

--- a/src/css/carousel-detail.css
+++ b/src/css/carousel-detail.css
@@ -37,6 +37,7 @@
   align-items: center;
   flex-direction: column;
   animation: grow 1s forwards;
+  -webkit-animation: grow 1s forwards;
   padding-bottom: 15px;
 }
 
